add delete item functionality

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,10 +6,12 @@
 
   <div class="box">
     <% newListItems.forEach(function(listItem) { %>
+      <form action="/delete" method="post">
       <div class="item">
         <input type="checkbox">
         <p><%=  listItem.name  %></p>
       </div>
+    </form>
       <% }) %>
 
       <form class="item" action="/" method="post">
