--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,7 @@
     <% newListItems.forEach(function(listItem) { %>
       <form action="/delete" method="post">
       <div class="item">
-        <input type="checkbox">
+        <input type="checkbox" name ="checkbox" value="<%=listItem._id%>" onchange="this.form.submit()">
         <p><%=  listItem.name  %></p>
       </div>
     </form>
